syntax = "proto2";
package ClubSubCmd;
//此文件对应主消息为 CLUB_MAIN_CMD

enum enClientSubCmdID
{
	CS_CREATE_CLUB						= 1;	//客户端请求创建俱乐部
	CS_RECOMMEND_CLUB_LIST              = 2;    //客户端请求推广列表
	CS_QUERY_CLUB_INFO                  = 3;    //客户端请求查询俱乐部信息
	CS_JOIN_CLUB                        = 4;    //客户端请求加入俱乐部
	CS_APPLY_FOR_CLUB_USER_LIST         = 6;   //客户端请求玩家加入俱乐部的列表（会长查看俱乐部申请列表）
	CS_ALTER_CLUB_INFO                  = 7;   //客户端请求修改俱乐部信息（会长或管理员）
	CS_CLUB_USER_LIST                   = 8;   //客户端请求俱乐部玩家列表（会长或管理员）
	CS_SET_CLUB_ADMIN                   = 9;   //客户端请求设置管理 员（会长或管理员）
	CS_DELETE_CLUB_USER                 = 10;   //客户端请求删除俱乐部玩家（会长或管理员）
	CS_CLUB_CHAT_MSG                    = 11;   //客户端请求发送聊天信息
	CS_CLUB_LOG_LIST                    = 12;   //客户端请求日志信息
	CS_CLUB_ADMIN_LIST                  = 13;   //客户端请求管理员列表
	CS_TOEXAMINE_USER_RESLUT            = 14;   //客户端管理员审核玩家结果
	CS_CANCEL_CLUB_ADMIN                = 15;   //客户端请求取消管理 员（会长或管理员）
	CS_SET_CLUB_ADMIN_RIGHT             = 16;   //客户端请求设置管理员权限（会长或管理员）
	CS_GET_CLUB_USER_INFO               = 17;   //客户端请求获取玩家信息
	CS_SET_CLUB_BASE_INFO               = 18;   //客户端请求修改俱乐部基本信息
	
	//=====================liuyuanlin=======start==================
	CS_CLUB_ROOM_LIST           = 300;   //客户端请求俱乐部房间列表
	CS_CLUB_TABLE_LIST          = 301;   //客户端请求俱乐部桌子列表
	CS_CLUB_CREATE_TABLE		=302;	 //创建桌子
	CS_CLUB_DISMISS_TABLE		=303;	 //解散桌子
	CS_CLUB_ENTER_ROOM		 	=304;	 //进入房间
	CS_CLUB_GAME_RECORD_LIST		 	=305;	 //请求游戏记录列表
	CS_CLUB_GAME_VIDEOTAPE 		 	=306;	 //请求游戏录像
	CS_CLUB_STATISTICS_INFO 		 	=307;	 //请求俱乐部统计信息
	CS_CLUB_RECEIVE_SERVER_RATE 		 	=308;	 //请求领取服务费
	CS_CLUB_SERVER_RATE_RECORD_LIST 		 =309;	 //请求服务费纪录
	//=====================liuyuanlin=======end=====================
};



enum enServerSubCmdID
{
	SC_CREATE_CLUB						= 101;	 //服务端创建俱乐部返回
	SC_RECOMMEND_CLUB_LIST              = 102;   //服务端推广列表返回
	SC_QUERY_CLUB_INFO                  = 103;   //服务端查询俱乐部信息返回
	SC_JOIN_CLUB                        = 104;   //服务端加入俱乐部返回
	SC_APPLY_FOR_CLUB_USER_LIST         = 106;   //服务端玩家加入俱乐部的列表返回
	SC_ALTER_CLUB_INFO                  = 107;   //服务端修改俱乐部信息返回（会长或管理员）
	SC_CLUB_USER_LIST                   = 108;   //服务端俱乐部玩家列表返回
	SC_SET_CLUB_ADMIN                   = 109;   //服务端设置管理员返回（会长或管理员）
	SC_DELETE_CLUB_USER                 = 110;   //服务端删除俱乐部玩家返回（会长或管理员）
	SC_DELETE_CLUB_USER_NOTIFY          = 111;   //服务端通知已经被删除的俱乐部玩家
	SC_CLUB_CHAT_MSG                    = 112;   //服务端转发聊天信息至所有俱乐部成员
	SC_CLUB_LOG_LIST                    = 113;   //服务端返回日志信息
	SC_CLUB_BASE_INFO_ON_LONGIN         = 114;   //服务端主动推送俱乐部基本信息在登陆时
	SC_CLUB_ADMIN_LIST                  = 115;   //服务端返回管理员列表
	SC_TOEXAMINE_USER_RESLUT            = 116;   //服务端返回管理员审核玩家结果
	SC_ADD_CLUB_USER_NOTIFY             = 117;   //服务端通知申请加入俱乐部玩家管理员审核的结果，同意的
	SC_ADD_CLUB_ADMIN_NOTIFY            = 118;   //服务端通知玩家设置为管理员
	SC_CANCEL_CLUB_ADMIN                = 119;   //服务端返回取消管理 员（会长或管理员）
	SC_CANCEL_CLUB_ADMIN_NOTIFY         = 120;   //服务端通知已经被取消管理员权限的俱乐部玩家
	SC_SET_CLUB_ADMIN_RIGHT             = 121;   //服务端设置管理员权限（会长或管理员）
	SC_SET_CLUB_ADMIN_RIGHT_NOTIFY      = 122;   //服务端设置管理员权限通知玩家
	SC_GET_CLUB_USER_INFO               = 123;   //服务端返回玩家信息
	SC_SET_CLUB_BASE_INFO               = 124;    //服务端返回修改俱乐部基本信息
	SC_SET_CLUB_NOTICE_NOTIFY           = 125;    //服务端推送俱乐部公告
	SC_JOIN_CLUB_NOTIFY_ADMIN           = 126;    //玩家申请加入俱乐部通知所有管理员
	SC_ALTER_CLUB_INFO_NOTIFY           = 127;    //俱乐部信息更新通知玩家
	SC_ALTER_USER_INFO_NOTIFY           = 128;    //玩家信息更新通知玩家
	//=====================liuyuanlin=======start==================
	SC_CLUB_ROOM_LIST            = 401; //俱乐部房间列表返回
	SC_CLUB_TABLE_LIST           = 402; //俱乐部房间列表返回
	SC_CLUB_CREATE_TABLE		 = 403; 	// 创建桌子返回
	SC_CLUB_DISMISS_TABLE		 = 404; 	// 解散桌子返回
	SC_CLUB_ENTER_ROOM		 	 = 405; 	// 进入响应
	SC_CLUB_GAME_RECORD_LIST     = 406; //俱乐部房间列表返回
	SC_CLUB_GAME_VIDEOTAPE 		 =407;	 //请求游戏录像
	SC_CLUB_STATISTICS_INFO 	 =408;	 //俱乐部统计信息返回
	SC_CLUB_RECEIVE_SERVER_RATE  =409;	 //领取服务费返回
	SC_CLUB_SERVER_RATE_RECORD_LIST 	=410;	 //请求服务费返回
	//=====================liuyuanlin=======end==================

};


//CS_CREATE_CLUB						= 1;	//客户端请求创建俱乐部
message CS_CreateClub
{
	required string            strClubName = 1;     //创建俱乐部名称
	required int64             iUserID = 2;         //玩家ID
	optional int32			   iWantCluId = 3; 		//玩家想要的俱乐部ID，压力测试使用
};

//CS_CLUB_LOG_LIST                    = 12;   //客户端请求日志信息
message CS_ClubLogs
{
	required int64             iClubID = 1;         //创建的俱乐部ID
	required int64             iUserID = 2;         //玩家ID	
};

//CS_RECOMMEND_CLUB_LIST              = 2;    //客户端请求推广列表
message CS_RecommendClubList
{
	required int64             iClubID = 1;         //创建的俱乐部ID
	required int64             iUserID = 2;         //玩家ID	
};

//CS_QUERY_CLUB_INFO                  = 3;    //客户端请求查询俱乐部信息
message CS_QueryClubInfo
{
	required int64             iClubID = 1;         //俱乐部ID
	required int64             iUserID = 2;         //玩家ID	
};

//CS_JOIN_CLUB                        = 4;    //客户端请求加入俱乐部
message CS_JoinClub
{
	required int64             iClubID = 1;         //俱乐部ID
	required int64             iUserID = 2;         //玩家ID	
};

//CS_APPLY_FOR_CLUB_USER_LIST         = 6;   //客户端请求玩家加入俱乐部的列表（会长查看俱乐部申请列表）
message CS_ApplyForClubUserList
{
	required int64             iClubID = 1;         //俱乐部ID
	required int64             iUserID = 2;         //玩家ID	
};

//CS_ALTER_CLUB_INFO                  = 7;   //客户端请求修改俱乐部信息（会长或管理员）
message CS_AlterClubInfo
{
	required int64             iClubID = 1;         //俱乐部ID
	required int64             iUserID = 2;         //玩家ID	
	optional int32             iSetRecommend = 3;   //设置推荐隐私 0 不推荐 1 推荐
	optional int64             iJoinCoin = 4;       //加入金币数（限制） 0 无限制
	optional int32             iCheckJoin = 5;      //玩家加入审核方式 0 无需审核  1 管理员审核 2 不允许加入
	optional int32             iChatLimit = 6;      //聊天方式 0 无限制  1 仅房间信息
	optional string            strClubName = 7;     //修改俱乐部名称
	optional string            strClubKeFu = 8;     //修改俱乐部客服
};

//CS_CLUB_USER_LIST                   = 8;   //客户端请求俱乐部玩家列表（会长或管理员）
message CS_ClubUserList
{
	required int64             iClubID     = 1;         //俱乐部ID
	required int64             iUserID     = 2;         //玩家ID
	required int32             iIndexStart = 3;         //索引起始值
	required int32             iIndexEnd   = 4;         //索引结束值
	optional int32             iFilter     = 5;         //搜索条件 0 无条件 其它待定
};

//CS_SET_CLUB_ADMIN                   = 9;   //客户端请求设置管理员（会长或管理员）
message CS_SetClubAdmin
{
	required int64             iClubID = 1;         //俱乐部ID
	required int64             iUserID = 2;         //被操作玩家ID
	required int64             iAdminID = 3;         //操作玩家ID	
};

//CS_DELETE_CLUB_USER                 = 10;   //客户端请求删除俱乐部玩家（会长或管理员）
message CS_DeleteClubUser
{
	required int64             iClubID = 1;         //俱乐部ID
	required int64             iUserID = 2;         //玩家ID
	required int64             iAdminID = 3;         //操作玩家ID	
};

//	CS_CLUB_CHAT_MSG                    = 11;   //客户端请求发送聊天信息
message CS_ClubChatMsg
{
	required int64             iClubID = 1;         //俱乐部ID
	optional int64             iMsgType = 2;        //消息类型 1：玩家聊天消息 2：房间消息
	optional string            mTextContent = 3; //文本内容
   optional bytes             mBinaryContent = 4; //二进制内容
   optional uint32            mContentTime = 5;//媒体时长（单位毫秒）
   optional uint32            mImageId = 6; //图片数据id
   optional uint32            mMediaId = 7;//媒体ID
};

//CS_CLUB_ADMIN_LIST                  = 13;   //客户端请求管理员列表
message CS_ClubAdminList
{
	required int64             iClubID     = 1;         //俱乐部ID
	required int64             iUserID     = 2;         //玩家ID
};

//CS_TOEXAMINE_USER_RESLUT            = 14;   //客户端管理员审核玩家结果
message CS_ToExamineUserResult
{
	required int64             iClubID = 1;         //俱乐部ID
	required int64             iUserID = 2;         //玩家ID
	required int64             iAdminID = 3;        //操作玩家ID	
	required int32             iResult = 4;         //结果ID：1 同意加入 其它：拒绝加入
}

//CS_CANCEL_CLUB_ADMIN                = 15;   //客户端请求取消管理 员（会长或管理员）
message CS_CancelClubAdmin
{
	required int64             iClubID = 1;         //俱乐部ID
	required int64             iUserID = 2;         //被操作玩家ID
	required int64             iAdminID = 3;         //操作玩家ID	
};

message CS_SetClubAdminRight
{
	repeated int32             adminRight = 1; //玩家权限
	required int64             iClubID   = 2;         //俱乐部ID
	required int64             iUserID   = 3;         //被操作玩家ID
	required int64             iAdminID  = 4;         //操作玩家ID	
};

//CS_GET_CLUB_USER_INFO               = 17;   //客户端请求获取玩家信息
message CS_GetClubUserInfo
{
	required int64             iClubID   = 2;         //俱乐部ID
	required int64             iUserID   = 3;         //玩家ID
};

//CS_SET_CLUB_BASE_INFO               = 18;   //客户端请求修改俱乐部基本信息
message CS_SetClubBaseInfo
{
	required int64             iClubID   = 1;         //俱乐部ID
	required int32             iSetType  = 2;         //设置类型 1 公告 2 简介
	required string            strMsg    = 3;         //内容
};

//俱乐部基本信息
message ST_ClubBaseInfo
{
	required int64             iClubID      = 1;         //创建的俱乐部ID
	required string            strClubName  = 2;     //俱乐部名称
	required string            strClubBrief = 3;    //俱乐部简介
	required string            strLogo      = 4;         //俱乐部图标
	required int64             iMemberLimit = 5;    //人数上限
	required int64             iMemberCount = 6;    //当前人数
	required int64             iJoinCoin    = 7;       //加入金币数（限制） 0 无限制
	
	required int32             iSetRecommend = 8;   //设置推荐隐私 0 不推荐 1 推荐
	required int32             iCheckJoin    = 9;      //玩家加入审核方式 0 无需审核  1 管理员审核 2 不允许加入
	required int32             iChatLimit    = 10;      //聊天方式 0 无限制  1 仅房间信息
	
	optional string            strQrTicket     = 11;       //俱乐部二维码票据
	optional string            strQrUrl        = 12;       //俱乐部二维码地址
	optional int64             iQrExpire       = 13;       //俱乐部二维码有效期
	optional int64             iQrCreateTime   = 14;       //俱乐部二维码创建时间
	optional string            strClubKeFu     = 15;     //俱乐部客服
};

//俱乐部基本信息
message ST_ClubInfo
{
	required ST_ClubBaseInfo   stClubBaseInfo  = 1;  
	required string            strRootName     = 2;     //会长名称
	required int64             iRootID         = 3;         //会长ID
	required int64             iCreateTime     = 4;     //创建时间
	required int64             iActivitySum    = 5;    //累计活跃
	required int64             iActivityDay    = 6;    //当前活跃
	required string            strNotice       = 7;       //公告
};

//SC_CREATE_CLUB						= 101;	//服务端创建俱乐部返回
message SC_CreateClub
{
	optional ST_ClubInfo        stClubInfo = 1;    //俱乐部信息
	required string             strMsg     = 2;    //创建返回消息
};

//SC_RECOMMEND_CLUB_LIST              = 102;    //服务端推广列表返回
message SC_RecommendClubList
{
	repeated ST_ClubBaseInfo  stRecommendList = 1;  //推荐列表
};

//SC_QUERY_CLUB_INFO                  = 103;    //服务端查询俱乐部信息返回
message SC_QueryClubInfo
{
	optional ST_ClubInfo  stClubInfo = 1;       //俱乐部信息
};

//SC_JOIN_CLUB                        = 104;    //服务端加入俱乐部返回
message SC_JoinClub
{
	required int32             iResult = 1;         //结果ID：0 加入成功 其它：错误读取消息
	required string            strMsg  = 2;         //结果消息
};

//SC_APPLY_FOR_CLUB_USER_LIST         = 106;   //服务端玩家加入俱乐部的列表返回
message ST_UserBaseInfo
{
	required string            strUserLogo = 1;         //玩家图标
	required string            strUserName = 2;         //玩家名称
	required int64             iUserID     = 3;         //玩家ID
	required int64             iUserVip    = 4;
	optional int64             iAccid      = 5;          //玩家accid
};

message SC_ApplyForClubUserList
{
	repeated ST_UserBaseInfo   stUserLists = 1;     //申请玩家列表
};


//SC_ALTER_CLUB_INFO                  = 107;   //服务端修改俱乐部信息返回（会长或管理员）
message SC_AlterClubInfo
{
	required int32             iResult = 1;         //结果ID：0 成功 其它：错误读取消息
	required string            strMsg  = 2;         //结果消息
	optional int32             iSetRecommend = 3;   //设置推荐隐私 0 不推荐 1 推荐
	optional int64             iJoinCoin = 4;       //加入金币数（限制） 0 无限制
	optional int32             iCheckJoin = 5;      //玩家加入审核方式 0 无需审核  1 管理员审核 2 不允许加入
	optional int32             iChatLimit = 6;      //聊天方式 0 无限制  1 仅房间信息
	optional string            strClubName = 7;     //修改俱乐部名称
	optional string            strClubKeFu = 8;     //修改俱乐部客服
};

//SC_CLUB_USER_LIST                   = 108;   //服务端俱乐部玩家列表返回
message ST_UserInfo
{
	required ST_UserBaseInfo   stBaseInfo        = 1;          //玩家基本信息
	required int64             iUserActivity     = 2;       //玩家活跃度
	required int64             iUserLastLogoutTm = 3;   //玩家最后退出时间
	required string            strUserBrief      = 4;        //玩家简介
	required int64             iUserLV           = 5;         //玩家等级
	repeated int32             adminRight        = 6; //玩家权限
	required int64             iUserLastLoginTm  = 7;   //玩家最后登录时间
	optional string            strUserLoginIP      = 8;   //玩家登录IP
};
message SC_ClubUserList
{
	repeated ST_UserInfo       stUserLists = 1;     //玩家列表
	required int32             iIndexStart = 2;     //索引起始值
	required int32             iIndexEnd   = 3;     //索引结束值
	required int32             iTotalCnt   = 4;     //总数
};

//SC_SET_CLUB_ADMIN                   = 109;   //服务端设置管理员返回（会长或管理员）
message SC_SetClubAdmin
{
	required int32             iResult = 1;         //结果ID：0 加入成功 其它：错误读取消息
	required string            strMsg  = 2;         //结果消息
};

//SC_DELETE_CLUB_USER                 = 110;   //服务端删除俱乐部玩家返回（会长或管理员）
message SC_DeleteClubUser
{
	required int32             iResult = 1;         //结果ID：0 加入成功 其它：错误读取消息
	required string            strMsg  = 2;         //结果消息
	required int64             iUserId = 3;         //被删除玩家id
};

//SC_DELETE_CLUB_USER_NOTIFY          = 111;   //服务端通知已经被删除的俱乐部玩家
message SC_DeleteClubUserNotify
{
	required int32             iResult = 1;         //结果ID：0 删除成功 其它：错误读取消息
	required string            strMsg  = 2;         //结果消息
};

//SC_CLUB_CHAT_MSG                    = 112;   //服务端转发聊天信息至所有俱乐部成员
message SC_ClubChatMsg
{
	required int64             iClubID     = 1;         //俱乐部ID
	required string            strUserName = 2;         //玩家名称
	required int64             iUserID     = 3;             //玩家ID
	optional int64             iMsgType = 4;        //消息类型 1：玩家聊天消息 2：房间消息
	optional string            mTextContent = 5; //文本内容
   optional bytes             mBinaryContent = 6; //二进制内容
   optional uint32            mContentTime = 7;//媒体时长（单位毫秒）
   optional uint32            mImageId = 8; //图片数据id
   optional uint32            mMediaId = 9;//媒体ID
	optional string            strHeader = 10; //头像
	optional string            strLoginIP = 11; //登录IP
	optional int64             iAccid = 12; //accid
};

//SC_CLUB_LOG_LIST                    = 113;   //服务端返回日志信息
message ST_ClubLogItem
{
	required int64             iLogTime      = 1;          //俱乐部日志信息
	required string            strLogContent = 2;     //俱乐部日志信息
};

message SC_ClubLogs
{
	repeated ST_ClubLogItem    stClubLogs = 1;        //俱乐部日志
};

//SC_CLUB_BASE_INFO_ON_LONGIN         = 114;   //服务端主动推送俱乐部基本信息在登陆时
message SC_ClubBaseInfoOnLogin
{
	required int64             iClubID         = 1;         //创建的俱乐部ID
	required string            strClubName     = 2;         //俱乐部名称
	required int64             iUserLv         = 4;         //玩家权限 0 普通 1 管理员 2 创建者
	required string            strNotice       = 5;       //公告
	optional string            strQrTicket     = 6;       //俱乐部二维码票据
	optional string            strQrUrl        = 7;       //俱乐部二维码地址
	optional int64             iQrExpire       = 8;       //俱乐部二维码有效期
	optional int64             iQrCreateTime   = 9;       //俱乐部二维码创建时间
	optional int32             iCheatLimit     = 10;      //俱乐部聊天限制
	optional string            strClubKeFu     = 11;      //俱乐部客服
	optional string            strClubBrief    = 12;      //俱乐部简介
};

//SC_CLUB_ADMIN_LIST                  = 115;   //服务端返回管理员列表
message SC_ClubAdminList
{
	repeated ST_UserInfo       stAdminLists = 1;     //管理员列表
};

//SC_TOEXAMINE_USER_RESLUT            = 116;   //服务端返回管理员审核玩家结果
message SC_ToExamineUserResult
{
	required int32             iResult = 1;         //结果ID：0 操作成功 其它：错误读取消息
	required string            strMsg  = 2;         //结果消息
}
//SC_ADD_CLUB_USER_NOTIFY             = 117;   //服务端通知申请加入俱乐部玩家管理员审核的结果，同意的
message SC_AddClubUserNotify
{
	optional SC_ClubBaseInfoOnLogin   stInfo  = 1;         //登录基本信息
	required int32                    iResult = 2;         //结果ID：0 加入成功 其它：错误读取消息
	required string                   strMsg  = 3;         //结果消息
};

//SC_ADD_CLUB_ADMIN_NOTIFY            = 118;   //服务端通知玩家设置为管理员
message SC_AddClubAdminNotify
{
	required int64             iUserLv = 1;         //玩家权限 0 普通 1 管理员 2 创建者
	required string            strMsg  = 2;         //消息
};
//SC_CANCEL_CLUB_ADMIN                = 119;   //服务端返回取消管理 员（会长或管理员）
message SC_CancelClubAdmin
{
	required int32             iResult = 1;         //结果ID：0 加入成功 其它：错误读取消息
	required string            strMsg  = 2;         //结果消息
};

//SC_CANCEL_CLUB_ADMIN_NOTIFY         = 120;   //服务端通知已经被取消管理员权限的俱乐部玩家
message SC_CancelClubAdminNotify
{
	required int64             iUserLv = 1;         //玩家权限 0 普通 1 管理员 2 创建者
	required string            strMsg  = 2;         //消息
};

//SC_SET_CLUB_ADMIN_RIGHT             = 121;   //服务端设置管理员权限（会长或管理员）
message SC_SetClubAdminRight
{
	repeated int32            adminRight = 1; //玩家权限
	required int32            iResult    = 2; //结果ID：0 设置成功 其它：错误读取消息
	required string           strMsg     = 3; //结果消息
};

//SC_SET_CLUB_ADMIN_RIGHT_NOTIFY      = 122;   //服务端设置管理员权限通知玩家
message SC_SetClubAdminRightNotify
{
	repeated int32             adminRight = 1; //玩家权限
};

//	SC_GET_CLUB_USER_INFO               = 123;   //服务端返回玩家信息
message SC_GetClubUserInfo
{
	optional ST_UserInfo       stInfo   = 1; //玩家信息
};

//SC_SET_CLUB_BASE_INFO               = 124;   //服务端返回修改俱乐部基本信息
message SC_SetClubBaseInfo
{
	required int32            iResult   = 1;         //结果ID：0 设置成功 其它：错误
	required int32            iSetType  = 2;         //设置类型 1 公告 2 简介 
	required string           strMsg    = 3;         //公告内容‘或简介内容
};

//SC_SET_CLUB_NOTICE_NOTIFY           = 125;    //服务端推送俱乐部公告
message SC_SetClubNoticeNotify
{
	required int32            iSetType  = 2;         //设置类型 1 公告 
	required string           strMsg    = 3;         //公告内容
};

//SC_JOIN_CLUB_NOTIFY_ADMIN           = 126;    //玩家申请加入俱乐部通知所有管理员
message SC_JoinClubNotifyAdmin
{
	optional int32            iRecommandCnt  = 1;         //申请列表人数 
};
//SC_ALTER_CLUB_INFO_NOTIFY           = 127;    //俱乐部信息更新通知玩家
message SC_AlterClubInfoNotify
{
	optional string            strQrTicket     = 1;       //俱乐部二维码票据
	optional string            strQrUrl        = 2;       //俱乐部二维码地址
	optional int64             iQrExpire       = 3;       //俱乐部二维码有效期
	optional int64             iQrCreateTime   = 4;       //俱乐部二维码创建时间
	optional int32             iChatLimit      = 5;       //聊天禁言 0 1禁普通玩家消息
	optional string            strClubName     = 6;     //修改俱乐部名称
	optional string            strClubKeFu     = 7;     //修改俱乐部客服
};

//SC_ALTER_USER_INFO_NOTIFY           = 128;    //玩家信息更新通知玩家
message SC_AlterUserInfoNotify
{
	required ST_UserInfo       stInfo   = 1; //玩家信息
};

//=====================liuyuanlin=======start==================
//CS_CLUB_ROOM_LIST           = 300;   //客户端请求俱乐部房间列表
message CS_ClubRoomList
{
	required int64             ClubID         = 1;         //俱乐部ID
	required int64 			   UserId		  = 2;		   //用户id
};


message RoomData
{
	required int64 				RoomId = 1;
	required int64				RoomType = 2;
	required int64				RoomKindId = 3;
	required string				GameRoomName = 4;
	required int64				mTableCount = 5;
	required int64				mTableUserCount = 6;
	
};

//SC_CLUB_ROOM_LIST           = 400;   //俱乐部房间列表返回
message SC_ClubRoomList
{
	required int64             ClubID         = 1;         //俱乐部ID
	repeated RoomData			RoomList	  = 2;		//房间列表
	required int64				mMaxCreateTableCount = 3; //最大创建房间数量
};


//CS_CLUB_TABLE_LIST           = 301;   //客户端请求俱乐部桌子列表
message CS_ClubTableList
{
	required int64             ClubID         = 1;         //俱乐部ID
	required int64			   TableType	  = 2;			//桌子类型（0.成员房 1.好友房)
	required int64 			   RoomId		  = 3;		   //房间id
	required int64 			   UserId		  = 4;		   //用户id
	required int32 			   GameCurrencyType = 5;		//游戏货币类型（1:钻石，2：金币，3积分）
};


message stTableAttribute
{
	required int32 			   GameCurrencyType = 1;		//游戏货币类型（1:钻石，2：金币，3积分）
	required int32 			   PayRoomRateType 	= 2;			//房费支付方式 （0：房主支付，1：AA支付）
	required int32 			   PlanGameCount	=3; 		//开房局数
	required int32			   DiZhu			=4;		//底注
	required int64			   EnterScore       =5;		//进入分数限制
	required int64			   LeaveScore       =6;		//离开分数限制
	required int64			   BeiShuLimit      =7;		//最大倍数限制
	required int32			   ChairCount       =8;		//房间椅子数量
	required int32			   IsAllowEnterAfterStart   =9;		//是否允许开始后加入房间
	required int64			   TableType		  = 10;			//桌子类型（0.成员房 1.好友房）
	required int64			   RoomRate       =11;		//房费
	required int64			   ServerRate       =12;		//服务费
	required string			   TableAdvanceParam =13; 			//桌子高级参数
	required string			   TableName =14; 			//桌子名字
	required int32			   IsIpWarn =15; 			//是否相同ip警告
	required int32			   IsGpsWarn =16; 			//是否相同地点警告
	optional int32			   TableId =17; 			//压力测试用，指定想要创建的桌子id

};

message MTableUserInfo
{
	required int64 			   mUserId		  = 1;		   //用户id
	required int64 			   mAccId		  = 2;		   //用户别名id
	required string			   mNickName	  = 3;			//用户昵称
}

message stTableData
{
	required int64 				RoomId = 1;//房间ID
	required int64				TableId = 2;//桌子ID
	required int32 				UserCount = 5;//当前玩家数量数量
	required bool				IsInGame = 6;//是否正在游戏
	required int64 				ClubId = 7;//俱乐部id
	required int64				OwnerUserId = 8;//创建者id
	optional string			    OwnerUserName =10;//玩家的名字
	optional int64				TableCreateTime = 11;//桌子创建
	optional int64				TableTotalServerRate = 12;//桌子总服务费
	
	required stTableAttribute	TableAttribute =9; //桌子高级参数
	repeated MTableUserInfo     mUserData = 13; //桌子上玩家数据

};

//SC_CLUB_TABLE_LIST           = 401;   //俱乐部桌子列表返回
message SC_ClubTableList
{
	required int64             ClubID         = 1;         //俱乐部ID
	required int64			   TableType	  = 2;			//桌子类型（0.成员房 1.好友房)
	required int64 			   RoomId		  = 3;		   //房间id
	required int64 			   UserId		  = 4;		   //用户id
	required int32 			   GameCurrencyType = 5;		//游戏货币类型（1:钻石，2：金币，3积分）
	repeated stTableData			TableList	  = 6;		//房间列表
};



//CS_CLUB_CREATE_TABLE		 =302;	 //创建桌子
message CS_ClubCreateTable
{
	required int64             ClubID         = 1;         //俱乐部ID
	required int64 			   RoomId		  = 2;		   //房间id
	
	required int32 			   TableType 	  =  3;			//0：成员房, 1 好友房
	required stTableAttribute	TableAttribute = 4; //桌子高级参数
};

//SC_CLUB_CREATE_TABLE		 = 402 	// 创建桌子返回
message SC_ClubCreateTable
{
	required int64             ClubID         = 1;         //俱乐部ID
	required int64 			   RoomId		  = 2;		   //房间id
	required int32			   Result		  = 3;		  //创建结果0：成功，1：俱乐部不存在，2:用户不存在 3：房间不存在，4：房费不足，5:房间数量达到上限 其他：系统错误
	required string			   ResultStr      = 4;		  //结果描述
	required int64			   TableId		  = 5;
	optional stTableAttribute	TableAttribute = 7; //桌子高级参数
};



//CS_CLUB_DISMISS_TABLE		 =303;	 //解散桌子
message CS_ClubDisMissTable
{
	required int64             ClubID         = 1;         //俱乐部ID
	required int64 			   RoomId		  = 2;		   //房间id
	required int64 			   TableId		  = 3;		   //Tableid
};


//SC_CLUB_DISMISS_TABLE		 = 403 	// 解散桌子返回
message SC_ClubDisMissTable
{
	required int64             ClubID         = 1;         //俱乐部ID
	required int64 			   RoomId		  = 2;		   //房间id
	required int64 			   TableId		  = 3;		   //Tableid
	required int32			   Result		  = 4;		  //解散结果0：成功，非0：失败
	required string			   ResultStr      = 5;		  //结果描述
};

//CS_CLUB_ENTER_ROOM		 =304;	 //进入房间
message CS_ClubEnterRoom
{
	required int64             ClubID         = 1;         //俱乐部ID
	required int64 			   RoomId		  = 2;		   //房间id
	required int64 			   TableId		  = 3;		   //Tableid
	required int64 			   UserLng		  = 4;		   //经度
	required int64 			   UserLat		  = 5;		   //纬度
};
//SC_CLUB_ENTER_ROOM		 = 404 	// 进入响应
message SC_ClubEnterRoom
{
	required int64             ClubID         = 1;         //俱乐部ID
	required int64 			   RoomId		  = 2;		   //房间id
	required int64 			   TableId		  = 3;		   //Tableid
	required int32			   Result		  = 4;		  //进入房间结果0：成功，非0：失败
	required string			   ResultStr      = 5;		  //结果描述
};



//CS_CLUB_GAME_RECORD_LIST		 	=305;	 //请求游戏记录列表
message CS_ClubGameRecordList
{
	required int64             ClubID         = 1;         //俱乐部ID
	required int32 			   mGameCurrencyType = 2;	  //游戏货币类型（1:钻石，2：金币，3积分）
};
//SC_CLUB_GAME_RECORD_LIST            = 406; //俱乐部房间列表返回
message SC_ClubGameRecordList
{
	required int64             ClubID         = 1;         //俱乐部ID
	required int32 			   mGameCurrencyType = 2;	  //游戏货币类型（1:钻石，2：金币，3积分）
	repeated bytes			   mGameRecords = 3;		  //游戏记录，该解析协议定义在GameSubUserCmd.proto中
	
};

//CS_CLUB_GAME_VIDEOTAPE 		 	=306;	 //请求游戏录像
message CS_ClubGameVideotape
{
	required int64             ClubID         = 1;         //俱乐部ID
	required string 	mGameVideotapeKey = 2; //游戏录像标记 
};

//SC_CLUB_GAME_VIDEOTAPE             = 407; //请求游戏返回
message SC_ClubGameVideotape
{
	required int64             ClubID         = 1;         //俱乐部ID
	required string 			mGameVideotapeKey = 2; //游戏录像标记
	optional bytes			   mGameVideotapeInfo = 3;  //游戏录像记录，该解析协议定义在每个游戏的proto中
};


//CS_CLUB_STATISTICS_INFO 		 	=307;	 //请求俱乐部统计信息
message CS_ClubStatisticsInfo
{
	required int64      ClubID         = 1;         //俱乐部ID
};

message MClubRoomStatisticsInfo
{
	required int64 			   KindId		  = 1;		   //游戏类型
	required int64 			   RoomId		  = 2;		   //房间id
	required int64 			   TableCount    = 3;		   //桌子数量
	required int64 			   TodayTotalOpenTableCount    = 4;		   //今日开局数
	required int64 			   TodayTotalServerRate    = 5;		   //今日服务费
	required int64 			   YestodayTotalOpenTableCount    = 6;		   //昨日开局数
	required int64 			   YestodayTotalServerRate    = 7;		   //昨日服务费
	required int64 			   OnLineUserCount    = 8;		   //在线人数
	
};

//SC_CLUB_STATISTICS_INFO 	 =408;	 //俱乐部统计信息返回
message SC_ClubStatisticsInfo
{
	required int64      ClubID         = 1;         //俱乐部ID
	required int64      ClubServerRate         = 2;  //服务费
	required int64      TotalClubServerRate         = 3;  //总的服务费
	required int64      TodayClubServerRate         = 4;  //昨日服务费
	required int64      YestodayClubServerRate         = 5;  //今日服务费
	repeated MClubRoomStatisticsInfo mRoomStatisticsInfo = 6;//房间统计信息
	required int64      LastReceiveServerRateTime         = 7;  //最后一次领取服务费时间
	
};

//CS_CLUB_RECEIVE_SERVER_RATE 		 	=308;	 //请求领取服务费
message CS_ClubReceiveServerRate
{
	required int64      ClubID         = 1;         //俱乐部ID
	required int64      ReceiveScore   = 2;         //请求领取的分数
};


//SC_CLUB_RECEIVE_SERVER_RATE  =409;	 //领取服务费返回
message SC_ClubReceiveServerRate
{
	required int64      ClubID         = 1;         //俱乐部ID
	required int64      ReceiveScore   = 2;         //领取的分数
	required int64      RemainderScore   = 3;       //剩余分数
};



//CS_CLUB_SERVER_RATE_RECORD_LIST 		 =309;	 //请求服务费纪录
message CS_ClubServerRateRecordList
{
	required int64             ClubID         = 1;         //俱乐部ID
};

message MDayServerRateInfo
{
	required int64             ServerRateScore         = 1;         //当日服务费分数
	required int64 			   DayTime				   = 2;		//时间
};


//SC_CLUB_SERVER_RATE_RECORD_LIST 	=410;	 //请求服务费返回
message SC_ClubServerRateRecordList
{
	required int64             ClubID         = 1;         //俱乐部ID
	repeated string ReceiveRecordList = 2;  //领取纪录 
	repeated MDayServerRateInfo   mServerRateList = 3;  	//每日服务费
};
//=====================liuyuanlin=======end==================





